--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "laravel/sail": "^0.0.5",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "laravel/breeze": "^1.0.1"
     },
     "config": {
         "optimize-autoloader": true,
